[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmstatus"
version = "0.1"
description = "A top like interface for a gearman cluster"
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "MIT-only"}
authors = [
    {name = "James M. Luedke", email = "contact@jluedke.com"}
]
maintainers = [
    {name = "James M. Luedke", email = "contact@jluedke.com"}
]
keywords = ["gearman", "monitoring", "cluster", "status"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "gevent",
]
urls = {Homepage = "http://jluedke.com/gmstatus"}

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pre-commit",
]

[tool.setuptools]
script-files = ["gmstatus"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.flake8]
max-line-length = 88
# Keep Black and Flake8 happy together:
extend-ignore = [
  "E203",  # space before : (conflicts with Black)
  "W503",  # line break before binary operator (Black style prefers)
]
per-file-ignores = [
  "gmstatus:E402",  # gevent monkeypatch needs to happen before imports
]

[tool.isort]
profile = "black"
line_length = 88

